// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Datepicker pattern should match snapshot 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            datepicker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value=""
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker pattern should match snapshot when all props are populated 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            datepicker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value="02/02/2020"
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
        <small
          class="css-ftpxt1-InputWrapper"
        >
          datepicker help
        </small>
      </div>
    </div>
  </div>
</div>
`;

exports[`Datepicker pattern should open calendar when button is clicked 1`] = `
<div>
  <div>
    <div
      class="css-1m0srfo-DatePickerInput"
    >
      <div
        class="css-109th3q-InputWrapper"
      >
        <div
          class="css-1qm0f6g-InputLabel"
        >
          <label
            class="css-1pst1pz-Label"
            for="picker"
          >
            picker
          </label>
        </div>
        <div
          class="css-xcsx4z"
        >
          <input
            class="css-msl6v2"
            id="picker"
            type="text"
            value="01/02/2020"
          />
          <div
            class="css-e7011r"
          >
            <button
              class="css-nnuopu-Button"
            >
              <span
                class="css-1geq0g0"
              >
                <i
                  class="material-icons  css-zif8ik-Icon"
                >
                  calendar_today
                </i>
              </span>
              <span />
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-1c8vey"
        data-testid="calendar-container"
      >
        <div
          class="css-r09zb2-Card"
        >
          <div>
            <div
              class="css-135ho84"
            >
              <div
                class="css-1pvc4u8-Calendar"
              >
                <div
                  class="css-ft1sxc-Calendar css-4cffwv"
                >
                  <button
                    class="css-hcal7n-Button"
                  >
                    <span
                      class="css-1geq0g0"
                    >
                      <i
                        class="material-icons  css-y0j37o-Icon"
                      >
                        chevron_left
                      </i>
                    </span>
                    <span />
                  </button>
                  <span
                    class="css-1a9mqxr-Text css-vurnku"
                  >
                    February
                     
                    2020
                  </span>
                  <button
                    class="css-hcal7n-Button"
                  >
                    <span />
                    <span
                      class="css-1geq0g0"
                    >
                      <i
                        class="material-icons  css-y0j37o-Icon"
                      >
                        chevron_right
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  class="css-1a0kgyi-Calendar"
                >
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      S
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      M
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      T
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      W
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      T
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      F
                    </span>
                  </div>
                  <div
                    class="css-108m3ho-Tooltip"
                  >
                    <span
                      class="css-1rgqr4q"
                    >
                      S
                    </span>
                  </div>
                </div>
                <div
                  class="css-1tme9z0-Calendar"
                >
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="0-0"
                    id="0-0"
                  >
                    26
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="1-1"
                    id="1-1"
                  >
                    27
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="2-2"
                    id="2-2"
                  >
                    28
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="3-3"
                    id="3-3"
                  >
                    29
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="4-4"
                    id="4-4"
                  >
                    30
                  </span>
                  <span
                    class="css-gakn16-CalendarDay"
                    data-testid="5-5"
                    id="5-5"
                  >
                    31
                  </span>
                  <span
                    class="css-1and8og-CalendarDay"
                    data-testid="6-6"
                    id="6-6"
                  >
                    1
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="0-7"
                    id="0-7"
                  >
                    2
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="1-8"
                    id="1-8"
                  >
                    3
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="2-9"
                    id="2-9"
                  >
                    4
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="3-10"
                    id="3-10"
                  >
                    5
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="4-11"
                    id="4-11"
                  >
                    6
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="5-12"
                    id="5-12"
                  >
                    7
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="6-13"
                    id="6-13"
                  >
                    8
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="0-14"
                    id="0-14"
                  >
                    9
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="1-15"
                    id="1-15"
                  >
                    10
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="2-16"
                    id="2-16"
                  >
                    11
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="3-17"
                    id="3-17"
                  >
                    12
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="4-18"
                    id="4-18"
                  >
                    13
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="5-19"
                    id="5-19"
                  >
                    14
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="6-20"
                    id="6-20"
                  >
                    15
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="0-21"
                    id="0-21"
                  >
                    16
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="1-22"
                    id="1-22"
                  >
                    17
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="2-23"
                    id="2-23"
                  >
                    18
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="3-24"
                    id="3-24"
                  >
                    19
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="4-25"
                    id="4-25"
                  >
                    20
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="5-26"
                    id="5-26"
                  >
                    21
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="6-27"
                    id="6-27"
                  >
                    22
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="0-28"
                    id="0-28"
                  >
                    23
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="1-29"
                    id="1-29"
                  >
                    24
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="2-30"
                    id="2-30"
                  >
                    25
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="3-31"
                    id="3-31"
                  >
                    26
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="4-32"
                    id="4-32"
                  >
                    27
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="5-33"
                    id="5-33"
                  >
                    28
                  </span>
                  <span
                    class="css-5ocht1-CalendarDay"
                    data-testid="6-34"
                    id="6-34"
                  >
                    29
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
